macros/src/snapshots/balsaq_macros__expand_schema__tests__multiple_tables_all_appear_in_schema.snap
---
source: macros/src/expand_schema.rs
expression: "run(quote! {}, quote!\n{\n    mod db\n    {\n        #[table(\"widgets\")] pub struct Widget {} #[table(\"posts\")] pub struct\n        Post {}\n    }\n},)"
---
mod db {
    #[table("widgets")]
    pub struct Widget {}
    #[table("posts")]
    pub struct Post {}
    pub const SCHEMA: &'static str = ::balsaq::__cf::concatcp!(
        < Widget as ::balsaq::Model > ::CREATE_TABLE, < Post as ::balsaq::Model >
        ::CREATE_TABLE
    );
}
