macros/src/snapshots/balsaq_macros__expand_schema__tests__single_table_generates_schema.snap
---
source: macros/src/expand_schema.rs
expression: "run(quote! {}, quote!\n{ mod db { #[table(\"widgets\")] pub struct Widget {} } },)"
---
mod db {
    #[table("widgets")]
    pub struct Widget {}
    pub const SCHEMA: &'static str = ::balsaq::__cf::concatcp!(
        < Widget as ::balsaq::Model > ::CREATE_TABLE
    );
}
